@@ -30,7 +30,7 @@ use Try::Tiny 0.04;
 #=====================================================================
 # Package Global Variables:
 
-our $VERSION = '1.03';
+our $VERSION = '1.04';
 
 our @EXPORT_OK = qw(_eval _eval_or_die);
 
